# semgrep-pfff-langs

./: .codemapignore  .gitmodules  Makefile  dune-project  todo.org
ast/ast_fuzzy/: dune
ast/ast_generic/: AST_generic.ml  AST_generic_helpers.ml  Meta_AST.ml  dune
compiled/cmt/finder/: dune  find_source.ml  find_source.mli
compiled/cmt/graph/: dune  graph_code_cmt.ml  graph_code_cmt.mli
compiled/cmt/parsing/: dune
dataflow/: AST_to_IL.ml  Constant_propagation.ml  Constant_propagation.mli  Dataflow_core.ml  Dataflow_svalue.ml  Limits_dataflow.ml  dune
finding/: dune
highlighting/highlight_code/: Highlight_AST.ml
highlighting/highlighters/: Parse_and_highlight.ml  Parse_and_highlight.mli  Parse_languages.ml  Parse_languages.mli  dune
il/: dune
indexing/database_code/: database_code.ml
indexing/graph_code/: dune
indexing/layer_code/: layer_code.ml
lang/: Lang.ml  Lang.mli
languages-blockchain/cairo/generic/: dune
languages-blockchain/circom/generic/: dune
languages-blockchain/move_on_aptos/generic/: dune
languages-blockchain/solidity/generic/: dune
languages-config/json/menhir/: dune
languages-config/jsonnet/generic/: dune
languages-config/yaml/generic/: dune
languages-config/yaml/parser/: dune
languages-markup/html/ast/: dune
languages-markup/html/generic/: dune
languages-markup/html/menhir/: token_helpers_html.ml
languages-markup/markdown/ast/: AST_markdown.ml  dune
languages-markup/markdown/highlight/: Highlight_markdown.ml  Highlight_markdown.mli  dune
languages-markup/markdown/recursive_descent/: Lexer_markdown.mll  Parse_markdown.ml  Parse_markdown.mli  Token_markdown.ml  dune
languages-markup/noweb/: ast_nw.ml  token_helpers_nw.ml
languages-misc/dockerfile/ast/: dune
languages-misc/dockerfile/tree-sitter/: dune
languages-misc/html/menhir/: dune
languages-misc/noweb/: dune  parse_nw.mli
languages-misc/noweb/highlight/: highlight_nw.ml
languages-misc/protobuf/generic/: dune
languages-misc/regexp/: dune
languages-misc/terraform/ast/: dune
languages/OTHER/noweb/: dune
languages/OTHER/regexp/: dune
languages/bash/ast/: AST_bash.ml  dune
languages/bash/generic/: dune
languages/bash/tree-sitter/: dune
languages/c/ast/: ast_c.ml  ast_c_build.ml  dune
languages/c/generic/: c_to_generic.ml  dune
languages/c/graph/: dune  graph_code_c.ml  graph_code_c.mli
languages/c/lsp/: LSP_c.ml  LSP_c.mli  dune
languages/c/menhir/: dune  test_parsing_c.ml
languages/c/tree-sitter/: Parse_c_tree_sitter.ml  Parse_c_tree_sitter.mli  dune
languages/cpp/ast/: ast_cpp.ml  dune
languages/cpp/generic/: cpp_to_generic.ml  dune
languages/cpp/highlight/: dune
languages/cpp/menhir/: dune  expected_menhir_conflicts  parse_cpp.ml  parse_cpp.mli  parsing_hacks.ml  pp_token.ml
languages/cpp/tree-sitter/: dune
languages/csharp/generic/: dune
languages/csharp/lsp/: LSP_csharp.ml  LSP_csharp.mli  dune
languages/dart/generic/: dune
languages/elixir/ast/: AST_elixir.ml  Elixir_to_elixir.ml  dune
languages/elixir/generic/: Elixir_to_generic.ml  dune
languages/elixir/tree-sitter/: Parse_elixir_tree_sitter.ml  dune
languages/go/ast/: ast_go.ml  dune
languages/go/generic/: dune  go_to_generic.ml
languages/go/highlight/: dune
languages/go/lsp/: LSP_go.ml  LSP_go.mli  dune
languages/go/menhir/: dune  parsing_hacks_go.ml
languages/go/tree-sitter/: dune
languages/haskell/ast/: AST_haskell.ml  dune
languages/haskell/generic/: Haskell_to_generic.ml  Haskell_to_generic.mli  dune
languages/haskell/lsp/: LSP_haskell.ml  LSP_haskell.mli  dune
languages/haskell/tree-sitter/: Parse_haskell_tree_sitter.ml  Parse_haskell_tree_sitter.mli  dune
languages/java/ast/: ast_java.ml  dune
languages/java/generic/: dune
languages/java/graph/: builtins_java.ml  builtins_java.mli  dune  graph_code_java.ml  graph_code_java.mli
languages/java/highlight/: dune
languages/java/lsp/: LSP_java.ml  LSP_java.mli  dune
languages/java/menhir/: dune  parser_java.mly  parsing_hacks_java.ml
languages/java/tree-sitter/: dune
languages/javascript/ast/: ast_js.ml  dune  visitor_js.ml
languages/javascript/generic/: dune  js_to_generic.ml
languages/javascript/graph/: dune  graph_code_js.ml  graph_code_js.mli  module_path_js.mli  stdlib_js.mli
languages/javascript/highlight/: dune
languages/javascript/menhir/: dune  expected_menhir_conflicts  parser_js.mly  parsing_hacks_js.ml
languages/json/ast/: AST_json.ml
languages/json/generic/: json_to_generic.ml  json_to_generic.mli
languages/json/menhir/: parse_json.ml
languages/ocaml/highlight/: dune
languages/ocaml/menhir/: dune
languages/php/menhir/: ast_php_build.ml  dune  expected_menhir_conflicts  lexer_php.mll  parser_php.mly
languages/python/highlight/: dune
languages/python/menhir/: Parse_python.mli  dune  expected_menhir_conflicts
languages/scala/recursive_descent/: dune
languages/zig/menhir/: Lexer_zig.mll  Parse_zig.ml  Parse_zig.mli  Parser_zig.mly  Parsing_hacks_zig.ml  Token_helpers_zig.ml  dune  expected_menhir_conflicts
libs/ast_fuzzy/: Lib_ast_fuzzy.ml  Lib_ast_fuzzy.mli  dune
libs/ast_generic/: AST_generic.ml  Meta_AST.ml
libs/database_code/: database_code.ml  dune
libs/graph_code/: dune
libs/highlight_code/: Highlight_AST.mli  Highlight_code.ml  Highlight_code.mli  Origin_info.ml  dune
libs/highlighters/: Parse_and_highlight.ml  Parse_and_highlight.mli  Parse_languages.ml  Parse_languages.mli  dune
libs/languages/: Language.ml  dune
libs/layer_code/: dune
libs/lib_languages/: LSP_lang.ml  Language.ml  Language.mli  dune
libs/lib_parsing/: Tok.ml  dune
libs/naming/: dune
libs/parsing_core/: Tok.ml  dune
location/: dune
naming/: Naming_AST.ml  Naming_AST.mli  dune
ojsonnet/: dune
parsing/: Parse_generic.ml  Parse_generic.mli  Parsing_result2.ml  Pfff_or_tree_sitter.ml  dune
parsing_infra/parsing_core/: dune
parsing_infra/parsing_tree_sitter/: Pfff_or_tree_sitter.ml  Pfff_or_tree_sitter.mli  dune
pretty/: Pretty_print_AST.ml  dune
scripts/: menhir-wrapper  setup-tree-sitter.sh
(+98 files in other folders)
