(lang dune 3.7)

(name semgrep-pfff-langs)
(using menhir 2.1)
(map_workspace_root false)

(generate_opam_files)
(version 1.0.0)

(source (github pad/semgrep-pfff-langs))
(maintainers "Yoann Padioleau <yoann.padioleau@gmail.com>")
(authors "Yoann Padioleau <yoann.padioleau@gmail.com>")
(license "LGPL-2.1-only")

;; Core parsing/AST packages

(package
  (name lib_parsing)
  (version 1.14.0)
  (synopsis "Small library to help writing parsers")
  (description "\
This is a small library of utilities used by Semgrep and
a few other projects developed at r2c to help writing
parsers, especially ocamlyacc/menhir based parsers.
"
  )
  (depends
    (ocaml (>= "4.13.0"))
    (dune (>= "3.2.0" ))
    (commons (>= "1.5.5"))
    (profiling (>= "1.5.5"))
    (fpath (>= "0.7.3"))
  )
)

(package (name lib_parsing_tree_sitter)
  (synopsis "Tree-sitter parsing utilities")
  (description "Utilities for using tree-sitter parsers from OCaml.")
)

(package
  (name ast_generic)
  (version 1.8.0)
  (synopsis "Abstract Syntax Tree (AST) supporting 31 programming languages")
  (description "\
This is a library defining a generic AST to factorize similar
analysis on different programming languages
(e.g., naming, semantic code highlighting, semgrep matching).
"
  )
  (depends
    (ocaml (>= 4.13.0))
    (dune (>= 3.2.0))
    (commons (>= 1.8.0))
    (lib_parsing (>= 1.5.5))
    (profiling (>= 1.5.5))
    (atdgen (>= 2.8.0))
  )
)

(package (name lib_languages)
  (synopsis "Per-language LSP helpers shared type")
  (description "Shared LSP_lang.t type and Language.ml for per-language support")
)

(package (name ojsonnet)
  (synopsis "Jsonnet interpreter in OCaml")
  (description "An OCaml implementation of the Jsonnet data templating language.")
)

;; Tree-sitter base packages (needed by per-language tree-sitter parsers)
(package (name tree-sitter-lang)
  (synopsis "Tree-sitter language base package")
  (description "Base package for tree-sitter language parsers.")
  (allow_empty)
)
(package (name tree-sitter-lang-pro)
  (synopsis "Tree-sitter language pro base package")
  (description "Base package for pro tree-sitter language parsers.")
  (allow_empty)
)

;; Per-language parser packages (sorted alphabetically)

(package (name parser_bash)
  (synopsis "Bash parser")
  (description "Bash parser for Semgrep.")
)
(package (name parser_c)
  (synopsis "C parser")
  (description "C parser for Semgrep.")
)
(package (name parser_cairo)
  (synopsis "Cairo parser")
  (description "Cairo parser for Semgrep.")
)
(package (name parser_circom)
  (synopsis "Circom parser")
  (description "Circom parser for Semgrep.")
)
(package (name parser_cpp)
  (synopsis "C++ parser")
  (description "C++ parser for Semgrep.")
)
(package (name parser_csharp)
  (synopsis "C# parser")
  (description "C# parser for Semgrep.")
)
(package (name parser_dart)
  (synopsis "Dart parser")
  (description "Dart parser for Semgrep.")
)
(package (name parser_dockerfile)
  (synopsis "Dockerfile parser")
  (description "Dockerfile parser for Semgrep.")
)
(package (name parser_elixir)
  (synopsis "Elixir parser")
  (description "Elixir parser for Semgrep.")
)
(package (name parser_go)
  (synopsis "Go parser")
  (description "Go parser for Semgrep.")
)
(package (name parser_hack)
  (synopsis "Hack parser")
  (description "Hack parser for Semgrep.")
)
(package (name parser_haskell)
  (synopsis "Haskell parser")
  (description "Haskell parser for Semgrep.")
)
(package (name parser_html)
  (synopsis "HTML parser")
  (description "HTML parser for Semgrep.")
)
(package (name parser_java)
  (synopsis "Java parser")
  (description "Java parser for Semgrep.")
)
(package (name parser_javascript)
  (synopsis "JavaScript parser")
  (description "JavaScript parser for Semgrep.")
)
(package (name parser_json)
  (synopsis "JSON parser")
  (description "JSON parser for Semgrep.")
)
(package (name parser_jsonnet)
  (synopsis "Jsonnet parser")
  (description "Jsonnet parser for Semgrep.")
)
(package (name parser_julia)
  (synopsis "Julia parser")
  (description "Julia parser for Semgrep.")
)
(package (name parser_kotlin)
  (synopsis "Kotlin parser")
  (description "Kotlin parser for Semgrep.")
)
(package (name parser_lisp)
  (synopsis "Lisp/Clojure parser")
  (description "Lisp and Clojure parser for Semgrep.")
)
(package (name parser_lua)
  (synopsis "Lua parser")
  (description "Lua parser for Semgrep.")
)
(package (name parser_move_on_aptos)
  (synopsis "Move on Aptos parser")
  (description "Move on Aptos parser for Semgrep.")
)
(package (name parser_move_on_sui)
  (synopsis "Move on Sui parser")
  (description "Move on Sui parser for Semgrep.")
)
(package (name parser_ocaml)
  (synopsis "OCaml parser")
  (description "OCaml parser for Semgrep.")
)
(package (name parser_php)
  (synopsis "PHP parser")
  (description "PHP parser for Semgrep.")
)
(package (name parser_promql)
  (synopsis "PromQL parser")
  (description "PromQL parser for Semgrep.")
)
(package (name parser_protobuf)
  (synopsis "Protobuf parser")
  (description "Protobuf parser for Semgrep.")
)
(package (name parser_python)
  (synopsis "Python parser")
  (description "Python parser for Semgrep.")
)
(package (name parser_ql)
  (synopsis "QL parser")
  (description "QL parser for Semgrep.")
)
(package (name parser_r)
  (synopsis "R parser")
  (description "R parser for Semgrep.")
)
(package (name parser_regexp)
  (synopsis "Regexp parser")
  (description "Regexp parser for Semgrep.")
)
(package (name parser_ruby)
  (synopsis "Ruby parser")
  (description "Ruby parser for Semgrep.")
)
(package (name parser_rust)
  (synopsis "Rust parser")
  (description "Rust parser for Semgrep.")
)
(package (name parser_scala)
  (synopsis "Scala parser")
  (description "Scala parser for Semgrep.")
)
(package (name parser_solidity)
  (synopsis "Solidity parser")
  (description "Solidity parser for Semgrep.")
)
(package (name parser_swift)
  (synopsis "Swift parser")
  (description "Swift parser for Semgrep.")
)
(package (name parser_terraform)
  (synopsis "Terraform/HCL parser")
  (description "Terraform/HCL parser for Semgrep.")
)
(package (name parser_typescript)
  (synopsis "TypeScript parser")
  (description "TypeScript parser for Semgrep.")
)
(package (name parser_vue)
  (synopsis "Vue parser")
  (description "Vue parser for Semgrep.")
)
(package (name parser_yaml)
  (synopsis "YAML parser")
  (description "YAML parser for Semgrep.")
)
(package (name parser_zig)
  (synopsis "Zig parser")
  (description "Zig parser for Semgrep.")
)
