
(library
 (public_name parsing_generic)
 (wrapped false)
 (libraries
   commons
   parsing_core
   parsing_tree_sitter ; Pfff_or_tree_sitter, throw_tokens, etc.
   tree-sitter.run ; for Parsing_result2

   ast_generic
   ; menhir and tree-sitter parsers + ast_generic converters
   parser_python.menhir parser_python.tree_sitter parser_python.ast_generic
   parser_java.menhir parser_java.tree_sitter parser_java.ast_generic
   parser_javascript.menhir parser_javascript.ast_generic
   parser_typescript.tree_sitter
   parser_ocaml.menhir parser_ocaml.tree_sitter parser_ocaml.ast_generic
   parser_c.menhir parser_c.tree_sitter parser_c.ast_generic

   naming_generic ; Naming_AST.ml
 )
 (preprocess
    (pps
      profiling.ppx
      ppx_deriving.show
    )
 )
)
