(library
 (public_name parser_regexp)
 (libraries
   menhirLib ; needed when using --table
   commons
   parsing_core
 )
 (preprocess (pps ppx_deriving.show))
)
(ocamllex Lexer)
; Use menhir-wrapper instead of (menhir ...) to suppress known conflicts
; and catch regressions. See menhir-wrapper at project root for details.
; Was: (menhir (modules Parser) (flags --unused-tokens --explain --table --fixed-exception))
(rule
 (targets Parser.ml Parser.mli)
 (deps Parser.mly)
 (action (run %{workspace_root}/menhir-wrapper Parser.mly)))
