; Dispatch layer: Parse_and_highlight + Parse_languages
; aggregates all per-language highlighters

(library
 (public_name highlighters)
 (name highlighters)
 (wrapped false)
 (libraries
   ; standard deps
   fpath
   logs

   ; semgrep deps
   commons
   parsing_core
   ast_generic
   highlight_code

   ; per-language highlighters
   parser_cpp.highlight
   parser_go.highlight
   parser_java.highlight
   parser_javascript.highlight
   parser_ocaml.highlight
   parser_php.highlight
   parser_python.highlight
   parser_scala.highlight
   codemap_parser_html.highlight
   parser_nw.highlight

   ; tree-sitter parsers (for Parse_languages.ml)
   parser_ruby.tree_sitter parser_ruby.ast_generic
   parser_lisp.recursive_descent
   parser_rust.ast_generic
   parser_jsonnet.tree_sitter parser_jsonnet.ast_generic
   parser_bash.tree_sitter parser_bash.ast_generic
   parser_dockerfile.tree_sitter
   parser_lisp.tree_sitter
   parser_yaml.ast_generic
   parser_haskell.tree_sitter parser_haskell.ast_generic
   parser_zig.menhir parser_zig.ast_generic

   ; for generic name resolver
   pfff_lang_GENERIC_naming

   parsing_tree_sitter
 )
 (preprocess (pps ppx_deriving.show))
)
