(library
 (public_name parsing_core)
 (name parsing_core)
 (wrapped false)
 (libraries
   fpath
   sexplib
   paths
   git_wrapper

   commons
   commons2
   profiling
 )
 (inline_tests)
 (preprocess
   (pps
     profiling.ppx
     ppx_deriving.show
     ppx_deriving.ord
     ppx_deriving.eq
     ppx_hash
     ppx_sexp_conv
     ppx_inline_test
   )
 )
)
