(library
 (public_name parser_c.tree_sitter)
 (name parser_c_tree_sitter)
 (wrapped false)
 (libraries
   commons
   parsing_core parsing_tree_sitter
   parser_c.ast
   parser_cpp.tree_sitter
   tree-sitter-lang.c
   ast_generic; TODO: just for fake, should move fake in parsing_core
 )
 (preprocess (pps ppx_deriving.show))
)
