(library
 (public_name parser_cpp.menhir)
 (name parser_cpp_menhir)
 (wrapped false)
 (libraries
   menhirLib
   commons
   parsing_core
   ast_fuzzy
   parser_cpp.ast
 )
 (preprocess (pps ppx_deriving.show))
)
(ocamllex lexer_cpp)
; Use menhir-wrapper instead of (menhir ...) to suppress known conflicts
; and catch regressions. See scripts/menhir-wrapper for details.
; Was: (menhir (modules parser_cpp) (flags --unused-tokens --explain --fixed-exception))
(rule
 (targets parser_cpp.ml parser_cpp.mli)
 (deps parser_cpp.mly expected_menhir_conflicts)
 (action (run %{project_root}/scripts/menhir-wrapper parser_cpp.mly)))
