(library
 (public_name parser_go.menhir)
 (name pfff_lang_go)
 (wrapped false)
 (libraries
   menhirLib
   commons
   parsing_core
   ast_fuzzy
   parser_go.ast
 )
 (preprocess (pps ppx_deriving.show))
)
(ocamllex lexer_go)
; Use menhir-wrapper instead of (menhir ...) to suppress known conflicts
; and catch regressions. See scripts/menhir-wrapper for details.
; Was: (menhir (modules parser_go) (flags --unused-tokens --explain --fixed-exception))
(rule
 (targets parser_go.ml parser_go.mli)
 (deps parser_go.mly)
 (action (run %{project_root}/scripts/menhir-wrapper parser_go.mly)))
