(library
 (public_name parser_haskell.tree_sitter)
 (name parser_haskell_tree_sitter)
 (wrapped false)
 (libraries
   commons
   lib_parsing lib_parsing_tree_sitter
   parser_haskell.ast
   tree-sitter-lang.haskell
   ast_generic
   parser_haskell.ast_generic
 )
 (preprocess (pps ppx_deriving.show))
)
