(library
 (public_name parser_haskell.tree_sitter)
 (name parser_haskell_tree_sitter)
 (wrapped false)
 (libraries
   commons
   parsing_core parsing_tree_sitter
   parser_haskell.ast
   tree-sitter-lang.haskell
   ast_generic
   parser_haskell.ast_generic
 )
 (preprocess (pps ppx_deriving.show))
)
