(library
 (public_name parser_javascript.menhir)
 (name parser_javascript_menhir)
 (wrapped false)
 (libraries
   menhirLib ; this is needed when using --table
   commons
   process_limits
   parsing_core
   ast_fuzzy
   parser_javascript.ast
 )
 (preprocess (pps ppx_deriving.show profiling.ppx))
)
(ocamllex lexer_js)
; Use menhir-wrapper instead of (menhir ...) to suppress known conflicts
; and catch regressions. See scripts/menhir-wrapper for details.
; Was: (menhir (modules parser_js) (flags --unused-tokens --explain --table --fixed-exception))
(rule
 (targets parser_js.ml parser_js.mli)
 (deps parser_js.mly expected_menhir_conflicts)
 (action (run %{project_root}/scripts/menhir-wrapper parser_js.mly)))
