(library
 (public_name parser_ocaml.menhir)
 (name parser_ocaml_menhir)
 (wrapped false)
 (libraries
   menhirLib
   commons
   parsing_core
   ast_fuzzy
   parser_ocaml.ast
 )
 (preprocess (pps ppx_deriving.show))
)
(ocamllex lexer_ml)
; Use menhir-wrapper instead of (menhir ...) to suppress known conflicts
; and catch regressions. See scripts/menhir-wrapper for details.
; Was: (menhir (modules parser_ml) (flags --unused-tokens --explain --fixed-exception))
(rule
 (targets parser_ml.ml parser_ml.mli)
 (deps parser_ml.mly)
 (action (run %{project_root}/scripts/menhir-wrapper parser_ml.mly)))
