(library
 (public_name parser_php.menhir)
 (name parser_php_menhir)
 (wrapped false)
 (libraries
   menhirLib
   commons
   lib_parsing
   parser_php.ast
 )
 (preprocess (pps ppx_deriving.show))
)
(ocamllex lexer_php)
; Use menhir-wrapper instead of (menhir ...) to suppress known conflicts
; and catch regressions. See menhir-wrapper at project root for details.
; Was: (menhir (modules parser_php) (flags --unused-tokens --explain --fixed-exception))
(rule
 (targets parser_php.ml parser_php.mli)
 (deps parser_php.mly expected_menhir_conflicts)
 (action (run %{project_root}/menhir-wrapper parser_php.mly)))
