(library
 (public_name parser_scala.recursive_descent)
 (name parser_scala_recursive_descent)
 (wrapped false)
 (libraries
   menhirLib
   commons
   parsing_core
   ast_fuzzy
   ast_generic ; some use of is_metavar_name
   parser_scala.ast
 )
 (preprocess (pps ppx_deriving.show profiling.ppx))
)
(ocamllex Lexer_scala)
; TODO: we don't really use menhir, just to get a list of tokens, could be defined without menhir!
; Use menhir-wrapper instead of (menhir ...) to suppress known conflicts
; and catch regressions. See menhir-wrapper at project root for details.
; Was: (menhir (modules Parser_scala) (flags --unused-tokens --explain --fixed-exception --external-tokens Token_scala))
(rule
 (targets Parser_scala.ml Parser_scala.mli)
 (deps Parser_scala.mly)
 (action (run %{workspace_root}/menhir-wrapper --external-tokens Token_scala Parser_scala.mly)))
