(library
 (public_name parser_zig.menhir)
 (name parser_zig_menhir)
 (wrapped false)
 (libraries
   menhirLib
   commons
   lib_parsing
   parser_zig.ast
 )
 (preprocess (pps ppx_deriving.show))
)
(ocamllex Lexer_zig)
; Use menhir-wrapper instead of (menhir ...) to suppress known conflicts
; and catch regressions. See menhir-wrapper at project root for details.
; Was: (menhir (modules Parser_zig) (flags --unused-tokens --explain --fixed-exception))
(rule
 (targets Parser_zig.ml Parser_zig.mli)
 (deps Parser_zig.mly expected_menhir_conflicts)
 (action (run %{project_root}/menhir-wrapper Parser_zig.mly)))
